@@ -7,6 +7,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-85
+2020-08-04 Mikhail S. Dubrovin
+- use default and average ADU/keV gain factors for epix10ka
+	modified:   ../app/epix10ka_deploy_constants
+	modified:   UtilsEpix10kaCalib.py
+
 Tag: V01-00-84
 2020-07-24 Mikhail S. Dubrovin
 - fix indexing issue in algorithm
